# galerymanager

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
galerymanager/: __init__.py  __main__.py  cli.py  datesource.py  exif.py  media.py  organizer.py  scanner.py
tests/: test_organizer.py
